can delete queries

--- a/Pages/Admin/Queries.cshtml
+++ b/Pages/Admin/Queries.cshtml
@@ -10,8 +10,8 @@
 
 <a href="Query?id=0">Create Issue Query</a>
 
-<partial name="_CrudDataTablePartial" />
+<partial name="_CrudDataTableWithDeletePartial" />
 
 @section Scripts {
-    
+
 }
