--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -13,7 +13,7 @@
 <div class="about">
 
     <p>
-        November 29, 2020</p>
+        November 29, 2020 morning</p>
     </p>
     <p>
         Corey Trager here, the author of Budoco and BugTracker.NET.
